hphp/hack/test/typecheck/await_as_an_expression/error/await_as_an_expression_not_async.php.exp
File "await_as_an_expression_not_async.php", line 6, characters 8-24:
await can only be used inside async functions (NastCheck[3003])
